// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FixRecord form should allow content indicators to be selected 1`] = `
"Snapshot Diff:
- First value
+ Second value

  <DocumentFragment>
    <div
-     style=\\"padding: 8px;\\"
+     class=\\"MuiGrid-container-3 StandardPage\\"
+   >
+     <h2
+       class=\\"MuiTypography-root-100 MuiTypography-h4-115 MuiTypography-colorPrimary-130 Page-layoutTitle-304\\"
      >
+       Request a correction or upload files
+     </h2>
      <div
-       class=\\"MuiGrid-container-3 MuiGrid-spacing-xs-8-25 MuiGrid-align-items-xs-center-11 MuiGrid-align-content-xs-center-15 MuiGrid-justify-xs-center-20\\"
+       class=\\"MuiGrid-item-4 Page-layoutCard-303\\"
      >
+       <form>
          <div
-         class=\\"MuiGrid-item-4 MuiGrid-grid-xs-auto-30\\"
-         style=\\"text-align: center;\\"
+           class=\\"MuiGrid-container-3 MuiGrid-spacing-xs-24-27\\"
          >
            <div
-           class=\\"MuiCircularProgress-root-294 MuiCircularProgress-colorPrimary-297 MuiCircularProgress-indeterminate-296\\"
-           role=\\"progressbar\\"
-           style=\\"width: 18px; height: 18px;\\"
+             class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43\\"
+           >
+             <div
+               class=\\"MuiPaper-root-310 MuiPaper-elevation1-313 MuiPaper-rounded-311 MuiCard-root-309 Cards-card-305 StandardCard\\"
+             >
+               <div
+                 class=\\"MuiCardHeader-root-337\\"
+               >
+                 <div
+                   class=\\"MuiCardHeader-content-340\\"
+                 >
+                   <h3
+                     class=\\"MuiTypography-root-100 MuiTypography-h5-116 MuiTypography-colorInherit-129 MuiCardHeader-title-341\\"
+                   >
+                     Work to be amended
+                   </h3>
+                 </div>
+               </div>
+               <div
+                 class=\\"MuiCardContent-root-343\\"
+               >
+                 <div
+                   class=\\"MuiGrid-container-3\\"
+                 >
+                   <div
+                     class=\\"MuiGrid-item-4 MuiGrid-grid-xs-true-31\\"
+                   >
+                     <div
+                       class=\\"MuiGrid-container-3\\"
+                     >
+                       <div
+                         class=\\"MuiGrid-item-4 MuiGrid-grid-xs-true-31\\"
+                         style=\\"min-width: 1px;\\"
+                       >
+                         <h6
+                           class=\\"MuiTypography-root-100 MuiTypography-h6-117 PublicationCitation-citationTitle-345\\"
+                         >
+                           <a
+                             href=\\"/view/UQ:41878\\"
+                           >
+                             Roles of heterogeneous nuclear ribonucleoproteins A/B in cell growth
+                           </a>
+                         </h6>
+                       </div>
+                       <div
+                         class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43 PublicationCitation-citationText-346\\"
+                       >
+                         <div
+                           class=\\"citationContent citationJournalArticle\\"
+                         >
+                           <span
+                             class=\\"citationAuthors\\"
+                           >
+                             <span
+                               class=\\"citationAuthor\\"
+                             >
+                               He, Y., 
+                             </span>
+                             <span
+                               class=\\"citationAuthor\\"
+                             >
+                               Brown, M. A., 
+                             </span>
+                             <span
+                               class=\\"citationAuthor\\"
+                             >
+                               Rothnagel, J. A., 
+                             </span>
+                             <span
+                               class=\\"citationAuthor\\"
+                             >
+                               Saunders, N. A.
+                             </span>
+                             <span
+                               class=\\"citationAuthor\\"
+                             >
+                                and Smith, R.
+                             </span>
+                              
+                           </span>
+                           <span
+                             class=\\"citationDate\\"
+                           >
+                             (2004).
+                           </span>
+                           <span
+                             class=\\"citationTitle\\"
+                           >
+                              Roles of heterogeneous nuclear ribonucleoproteins A/B in cell growth.
+                           </span>
+                           <span
+                             class=\\"citationJournalName\\"
+                           >
+                              Molecular Biology of The Cell 
+                           </span>
+                           <span
+                             class=\\"citationVolumeNumber\\"
+                           >
+                              15 
+                           </span>
+                           <span
+                             class=\\"citationIssueNumber empty\\"
+                           />
+                           <span
+                             class=\\"citationPageRange\\"
+                           >
+                             <span
+                               class=\\"citationStartPage\\"
+                             >
+                               252A
+                             </span>
+                             -
+                             <span
+                               class=\\"citationEndPage\\"
+                             >
+                               253A
+                             </span>
+                           </span>
+                           <span>
+                             . 
+                           </span>
+                           <span
+                             class=\\"citationDOI empty\\"
+                           />
+                         </div>
+                       </div>
+                       <div
+                         class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43 PublicationCitation-citationCounts-347\\"
+                       >
+                         <div
+                           class=\\"MuiGrid-container-3\\"
+                         >
+                           <div
+                             class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43 MuiGrid-grid-sm-auto-44\\"
+                           >
+                             <a
+                               aria-label=\\"Full citation in Web of science will open in a new window\\"
+                               class=\\"wosCitationCount CitationCountView-citationCount-352 ExternalLink-externalLink-354\\"
+                               href=\\"http://ezproxy.library.uq.edu.au/login?url=http://gateway.isiknowledge.com/gateway/Gateway.cgi?GWVersion=2&SrcApp=resolve1&DestLinkType=FullRecord&DestApp=WOS_CPL&KeyUT=000224648802120&SrcAuth=uqueensland\\"
+                               rel=\\"noopener noreferrer\\"
+                               tabindex=\\"0\\"
+                               target=\\"_blank\\"
+                               theme=\\"[object Object]\\"
+                               title=\\"Full citation in Web of science will open in a new window\\"
+                             >
+                               <span
+                                 class=\\"fez-icon wos large\\"
+                               />
+                               <span
+                                 class=\\"CitationCountView-citationCountNumber-353\\"
+                               >
+                                 2
+                               </span>
+                             </a>
+                             <a
+                               aria-label=\\"Full citation in Google scholar will open in a new window\\"
+                               class=\\"googleCitationCount CitationCountView-citationCount-352 ExternalLink-externalLink-354\\"
+                               href=\\"https://scholar.google.com/scholar?q=intitle:Roles%20of%20heterogeneous%20nuclear%20ribonucleoproteins%20A/B%20in%20cell%20growth\\"
+                               rel=\\"noopener noreferrer\\"
+                               tabindex=\\"0\\"
+                               target=\\"_blank\\"
+                               theme=\\"[object Object]\\"
+                               title=\\"Full citation in Google scholar will open in a new window\\"
+                             >
+                               <span
+                                 class=\\"fez-icon google large\\"
+                               />
+                             </a>
+                             <span
+                               class=\\"noOaIcon\\"
+                             />
+                           </div>
+                           <div
+                             class=\\"MuiGrid-item-4\\"
+                           >
+                             <a
+                               class=\\"CitationCounts-statsLink-351 ExternalLink-externalLink-354\\"
+                               href=\\"https://app.library.uq.edu.au/#/authors/view/UQ:41878\\"
+                               rel=\\"noopener noreferrer\\"
+                               tabindex=\\"0\\"
+                               target=\\"_blank\\"
+                               theme=\\"[object Object]\\"
+                               title=\\"Roles of heterogeneous nuclear ribonucleoproteins A/B in cell growth\\"
                              >
                                <svg
-             class=\\"MuiCircularProgress-svg-299\\"
-             viewBox=\\"22 22 44 44\\"
+                                 aria-hidden=\\"true\\"
+                                 class=\\"MuiSvgIcon-root-356 ExternalLink-externalLinkIcon-355\\"
+                                 focusable=\\"false\\"
+                                 role=\\"presentation\\"
+                                 viewBox=\\"0 0 24 24\\"
+                               >
+                                 <path
+                                   d=\\"M0 0h24v24H0z\\"
+                                   fill=\\"none\\"
+                                 />
+                                 <path
+                                   d=\\"M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z\\"
+                                 />
+                               </svg>
+                               View full statistics
+                             </a>
+                           </div>
+                           <div
+                             class=\\"MuiGrid-item-4 MuiGrid-grid-xs-true-31\\"
+                           />
+                         </div>
+                       </div>
+                     </div>
+                   </div>
+                 </div>
+                 <hr
+                   class=\\"MuiDivider-root-365 PublicationCitation-divider-344\\"
+                 />
+                 <div
+                   class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43\\"
+                 >
+                   <span
+                     class=\\"MuiTypography-root-100 MuiTypography-caption-110 MuiTypography-gutterBottom-127\\"
+                   >
+                     <span
+                       class=\\"PublicationCitation-contentIndicatorTitle-349\\"
+                     >
+                       Content Indicators:
+                     </span>
+                     Scholarship of Teaching and Learning, Protocol
+                   </span>
+                 </div>
+                 <div
+                   class=\\"MuiFormControl-root-369\\"
+                   style=\\"width: 100%;\\"
+                 >
+                   <label
+                     class=\\"MuiFormLabel-root-380 MuiFormLabel-error-383 MuiFormLabel-required-385 MuiInputLabel-root-373 MuiInputLabel-formControl-374 MuiInputLabel-animated-377\\"
+                     data-shrink=\\"false\\"
+                   >
+                     Select an action
+                     <span
+                       class=\\"MuiFormLabel-asterisk-386 MuiFormLabel-error-383\\"
+                     >
+                        *
+                     </span>
+                   </label>
+                   <div
+                     class=\\"MuiInputBase-root-407 MuiInput-root-394 MuiInput-underline-398 MuiInputBase-error-413 MuiInput-error-399 MuiInputBase-formControl-408 MuiInput-formControl-395\\"
+                     label=\\"Select an action\\"
+                     required=\\"\\"
+                   >
+                     <div
+                       class=\\"MuiSelect-root-387\\"
+                     >
+                       <div
+                         aria-haspopup=\\"true\\"
+                         aria-pressed=\\"false\\"
+                         class=\\"MuiSelect-select-388 MuiSelect-selectMenu-391 MuiInputBase-input-417 MuiInput-input-402\\"
+                         id=\\"fixAction\\"
+                         role=\\"button\\"
+                         tabindex=\\"0\\"
+                       >
+                         <span>
+                           ​
+                         </span>
+                       </div>
+                       <input
+                         name=\\"fixAction\\"
+                         type=\\"hidden\\"
+                         value=\\"\\"
+                       />
+                       <svg
+                         aria-hidden=\\"true\\"
+                         class=\\"MuiSvgIcon-root-356 MuiSelect-icon-393\\"
+                         focusable=\\"false\\"
+                         role=\\"presentation\\"
+                         viewBox=\\"0 0 24 24\\"
+                       >
+                         <path
+                           d=\\"M7 10l5 5 5-5z\\"
+                         />
+                       </svg>
+                     </div>
+                   </div>
+                   <p
+                     class=\\"MuiFormHelperText-root-464 MuiFormHelperText-error-465 MuiFormHelperText-required-471\\"
+                   >
+                     This field is required
+                   </p>
+                 </div>
+               </div>
+             </div>
+           </div>
+           <div
+             class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43\\"
+           >
+             <div
+               class=\\"Alert\\"
+               style=\\"padding: 12px;\\"
+             >
+               <div
+                 class=\\"MuiGrid-container-3 MuiGrid-spacing-xs-24-27 MuiGrid-align-items-xs-flex-start-12 MuiGrid-align-content-xs-center-15 MuiGrid-justify-xs-center-20 Alert-warning-480 Alert-common-472\\"
+               >
+                 <div
+                   class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43 MuiGrid-grid-sm-true-45\\"
+                 >
+                   <div
+                     class=\\"MuiGrid-container-3 MuiGrid-align-items-xs-flex-start-12 MuiGrid-align-content-xs-center-15 MuiGrid-justify-xs-center-20\\"
+                   >
+                     <div
+                       class=\\"MuiGrid-item-4 Alert-icon-473\\"
+                       id=\\"icon\\"
+                     >
+                       <svg
+                         aria-hidden=\\"true\\"
+                         class=\\"MuiSvgIcon-root-356 icon\\"
+                         focusable=\\"false\\"
+                         role=\\"presentation\\"
+                         viewBox=\\"0 0 24 24\\"
                        >
-             <circle
-               class=\\"MuiCircularProgress-circle-300 MuiCircularProgress-circleIndeterminate-302\\"
-               cx=\\"44\\"
-               cy=\\"44\\"
+                         <path
+                           d=\\"M0 0h24v24H0z\\"
                            fill=\\"none\\"
-               r=\\"21\\"
-               stroke-width=\\"2\\"
+                         />
+                         <path
+                           d=\\"M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z\\"
                          />
                        </svg>
                      </div>
+                     <div
+                       class=\\"MuiGrid-item-4 MuiGrid-grid-xs-true-31 Alert-text-474\\"
+                       id=\\"text\\"
+                     >
+                       <b>
+                         Validation - 
+                       </b>
+                       <span>
+                         Form cannot be submitted until all fields are valid. Please review all input fields.
+                         <ul />
+                       </span>
+                     </div>
                    </div>
+                 </div>
+               </div>
+             </div>
+           </div>
+         </div>
          <div
-         class=\\"MuiGrid-item-4 MuiGrid-grid-xs-auto-30\\"
-         style=\\"text-align: center;\\"
+           class=\\"MuiGrid-container-3 MuiGrid-spacing-xs-24-27\\"
+         >
+           <div
+             class=\\"MuiGrid-item-4 MuiGrid-grid-xs-true-31\\"
+           />
+           <div
+             class=\\"MuiGrid-item-4\\"
            >
+             <button
+               class=\\"MuiButtonBase-root-454 MuiButton-root-428 MuiButton-contained-439 MuiButton-raised-442 MuiButton-fullWidth-453\\"
+               tabindex=\\"0\\"
+               type=\\"button\\"
+             >
                <span
-           class=\\"MuiTypography-root-100 MuiTypography-h5-116 MuiTypography-colorPrimary-130\\"
-           style=\\"font-size: 1.33rem;\\"
+                 class=\\"MuiButton-label-429\\"
                >
-           Loading work
+                 Cancel
                </span>
+               <span
+                 class=\\"MuiTouchRipple-root-457\\"
+               />
+             </button>
            </div>
+         </div>
+       </form>
      </div>
    </div>
  </DocumentFragment>"
`;

exports[`FixRecord form should allow content indicators to be selected 2`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -265,11 +265,12 @@
                      <div
                        class=\\"MuiSelect-root-387\\"
                      >
                        <div
                          aria-haspopup=\\"true\\"
-                         aria-pressed=\\"false\\"
+                         aria-owns=\\"menu-fixAction\\"
+                         aria-pressed=\\"true\\"
                          class=\\"MuiSelect-select-388 MuiSelect-selectMenu-391 MuiInputBase-input-417 MuiInput-input-402\\"
                          id=\\"fixAction\\"
                          role=\\"button\\"
                          tabindex=\\"0\\"
                        >"
`;

exports[`FixRecord form should allow content indicators to be selected 3`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -245,45 +245,42 @@
                  <div
                    class=\\"MuiFormControl-root-369\\"
                    style=\\"width: 100%;\\"
                  >
                    <label
-                     class=\\"MuiFormLabel-root-380 MuiFormLabel-error-383 MuiFormLabel-required-385 MuiInputLabel-root-373 MuiInputLabel-formControl-374 MuiInputLabel-animated-377\\"
-                     data-shrink=\\"false\\"
+                     class=\\"MuiFormLabel-root-380 MuiFormLabel-filled-384 MuiFormLabel-required-385 MuiInputLabel-root-373 MuiInputLabel-formControl-374 MuiInputLabel-animated-377 MuiInputLabel-shrink-376\\"
+                     data-shrink=\\"true\\"
                    >
                      Select an action
                      <span
-                       class=\\"MuiFormLabel-asterisk-386 MuiFormLabel-error-383\\"
+                       class=\\"MuiFormLabel-asterisk-386\\"
                      >
                         *
                      </span>
                    </label>
                    <div
-                     class=\\"MuiInputBase-root-407 MuiInput-root-394 MuiInput-underline-398 MuiInputBase-error-413 MuiInput-error-399 MuiInputBase-formControl-408 MuiInput-formControl-395\\"
+                     class=\\"MuiInputBase-root-407 MuiInput-root-394 MuiInput-underline-398 MuiInputBase-formControl-408 MuiInput-formControl-395\\"
                      label=\\"Select an action\\"
                      required=\\"\\"
                    >
                      <div
                        class=\\"MuiSelect-root-387\\"
                      >
                        <div
                          aria-haspopup=\\"true\\"
-                         aria-owns=\\"menu-fixAction\\"
-                         aria-pressed=\\"true\\"
+                         aria-pressed=\\"false\\"
                          class=\\"MuiSelect-select-388 MuiSelect-selectMenu-391 MuiInputBase-input-417 MuiInput-input-402\\"
                          id=\\"fixAction\\"
                          role=\\"button\\"
                          tabindex=\\"0\\"
                        >
-                         <span>
-                           ​
-                         </span>
+                         I am the author/editor/contributor of this work - I would like to add information, make a correction, or upload files
                        </div>
                        <input
                          name=\\"fixAction\\"
                          type=\\"hidden\\"
-                         value=\\"\\"
+                         value=\\"fix\\"
                        />
                        <svg
                          aria-hidden=\\"true\\"
                          class=\\"MuiSvgIcon-root-356 MuiSelect-icon-393\\"
                          focusable=\\"false\\"
@@ -292,21 +289,309 @@
                        >
                          <path
                            d=\\"M7 10l5 5 5-5z\\"
                          />
                        </svg>
+                     </div>
+                   </div>
+                 </div>
+               </div>
+             </div>
+           </div>
+           <div />
+           <div
+             class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43\\"
+           >
+             <div
+               class=\\"MuiPaper-root-310 MuiPaper-elevation1-313 MuiPaper-rounded-311 MuiCard-root-309 Cards-card-305 StandardCard\\"
+             >
+               <div
+                 class=\\"MuiCardHeader-root-337\\"
+               >
+                 <div
+                   class=\\"MuiCardHeader-content-340\\"
+                 >
+                   <h3
+                     class=\\"MuiTypography-root-100 MuiTypography-h5-116 MuiTypography-colorInherit-129 MuiCardHeader-title-341\\"
+                   >
+                     Content Indicators
+                   </h3>
                  </div>
                </div>
+               <div
+                 class=\\"MuiCardContent-root-343\\"
+               >
+                 <div
+                   class=\\"MuiGrid-container-3 MuiGrid-spacing-xs-24-27\\"
+                 >
+                   <div
+                     class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43\\"
+                   >
                      <p
-                     class=\\"MuiFormHelperText-root-464 MuiFormHelperText-error-465 MuiFormHelperText-required-471\\"
+                       class=\\"MuiTypography-root-100 MuiTypography-body2-108\\"
+                     >
+                       You can select multiple indicators for a work, but cannot remove existing ones. To change existing information, submit as a correction below.
+                     </p>
+                   </div>
+                   <div
+                     class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43\\"
+                   >
+                     <div
+                       class=\\"MuiFormControl-root-369 MuiFormControl-fullWidth-372\\"
+                     >
+                       <label
+                         class=\\"MuiFormLabel-root-380 MuiFormLabel-filled-384 MuiInputLabel-root-373 MuiInputLabel-formControl-374 MuiInputLabel-animated-377 MuiInputLabel-shrink-376\\"
+                         data-shrink=\\"true\\"
                        >
-                     This field is required
+                         Please select relevant indicator(s).
+                       </label>
+                       <div
+                         class=\\"MuiInputBase-root-407 MuiInput-root-394 MuiInput-underline-398 MuiInputBase-formControl-408 MuiInput-formControl-395\\"
+                       >
+                         <div
+                           class=\\"MuiSelect-root-387\\"
+                         >
+                           <div
+                             aria-haspopup=\\"true\\"
+                             aria-pressed=\\"false\\"
+                             class=\\"MuiSelect-select-388 MuiSelect-selectMenu-391 MuiInputBase-input-417 MuiInput-input-402\\"
+                             id=\\"content-indicators\\"
+                             role=\\"button\\"
+                             tabindex=\\"0\\"
+                           >
+                             Scholarship of Teaching and Learning, Protocol
+                           </div>
+                           <input
+                             type=\\"hidden\\"
+                             value=\\"454079,454080\\"
+                           />
+                           <svg
+                             aria-hidden=\\"true\\"
+                             class=\\"MuiSvgIcon-root-356 MuiSelect-icon-393\\"
+                             focusable=\\"false\\"
+                             role=\\"presentation\\"
+                             viewBox=\\"0 0 24 24\\"
+                           >
+                             <path
+                               d=\\"M7 10l5 5 5-5z\\"
+                             />
+                           </svg>
+                         </div>
+                       </div>
+                     </div>
+                   </div>
+                 </div>
+               </div>
+             </div>
+           </div>
+           <div
+             class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43\\"
+           >
+             <div
+               class=\\"MuiPaper-root-310 MuiPaper-elevation1-313 MuiPaper-rounded-311 MuiCard-root-309 Cards-card-305 StandardCard\\"
+             >
+               <div
+                 class=\\"MuiCardHeader-root-337\\"
+               >
+                 <div
+                   class=\\"MuiCardHeader-content-340\\"
+                 >
+                   <h3
+                     class=\\"MuiTypography-root-100 MuiTypography-h5-116 MuiTypography-colorInherit-129 MuiCardHeader-title-341\\"
+                   >
+                     Suggest a correction
+                   </h3>
+                 </div>
+               </div>
+               <div
+                 class=\\"MuiCardContent-root-343\\"
+               >
+                 <div
+                   class=\\"MuiGrid-container-3 MuiGrid-spacing-xs-16-26\\"
+                 >
+                   <div
+                     class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43\\"
+                   >
+                     <div
+                       class=\\"MuiFormControl-root-369 MuiFormControl-fullWidth-372\\"
+                     >
+                       <label
+                         class=\\"MuiFormLabel-root-380 MuiInputLabel-root-373 MuiInputLabel-formControl-374 MuiInputLabel-animated-377\\"
+                         data-shrink=\\"false\\"
+                         for=\\"Describe the problem with this record, eg record is a duplicate, or suggested changes\\"
+                       >
+                         Describe the problem with this record, eg record is a duplicate, or suggested changes
+                       </label>
+                       <div
+                         class=\\"MuiInputBase-root-407 MuiInput-root-394 MuiInput-underline-398 MuiInputBase-fullWidth-416 MuiInput-fullWidth-401 MuiInputBase-formControl-408 MuiInput-formControl-395 MuiInputBase-multiline-415 MuiInput-multiline-400\\"
+                       >
+                         <textarea
+                           aria-invalid=\\"false\\"
+                           class=\\"MuiInputBase-input-417 MuiInput-input-402 MuiInputBase-inputMultiline-419 MuiInput-inputMultiline-404\\"
+                           id=\\"Describe the problem with this record, eg record is a duplicate, or suggested changes\\"
+                           name=\\"comments\\"
+                           rows=\\"3\\"
+                         />
+                       </div>
+                     </div>
+                   </div>
+                   <div
+                     class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43\\"
+                   >
+                     <div
+                       class=\\"MuiFormControl-root-369 MuiFormControl-fullWidth-372\\"
+                     >
+                       <label
+                         class=\\"MuiFormLabel-root-380 MuiInputLabel-root-373 MuiInputLabel-formControl-374 MuiInputLabel-animated-377\\"
+                         data-shrink=\\"false\\"
+                         for=\\"Link (URL)\\"
+                       >
+                         Link (URL)
+                       </label>
+                       <div
+                         class=\\"MuiInputBase-root-407 MuiInput-root-394 MuiInput-underline-398 MuiInputBase-fullWidth-416 MuiInput-fullWidth-401 MuiInputBase-formControl-408 MuiInput-formControl-395\\"
+                       >
+                         <input
+                           aria-invalid=\\"false\\"
+                           class=\\"MuiInputBase-input-417 MuiInput-input-402\\"
+                           id=\\"Link (URL)\\"
+                           name=\\"rek_link\\"
+                           type=\\"text\\"
+                           value=\\"\\"
+                         />
+                       </div>
+                     </div>
+                   </div>
+                 </div>
+               </div>
+             </div>
+           </div>
+           <div
+             class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43\\"
+           >
+             <div
+               class=\\"MuiPaper-root-310 MuiPaper-elevation1-313 MuiPaper-rounded-311 MuiCard-root-309 Cards-card-305 StandardCard\\"
+             >
+               <div
+                 class=\\"MuiCardHeader-root-337\\"
+               >
+                 <div
+                   class=\\"MuiCardHeader-content-340\\"
+                 >
+                   <h3
+                     class=\\"MuiTypography-root-100 MuiTypography-h5-116 MuiTypography-colorInherit-129 MuiCardHeader-title-341\\"
+                   >
+                     Upload files
+                   </h3>
+                 </div>
+               </div>
+               <div
+                 class=\\"MuiCardContent-root-343\\"
+               >
+                 <div>
+                   Upload an Open Access file, HERDC evidence or an NTRO Research Statement
+                 </div>
+                 <p
+                   class=\\"MuiTypography-root-100 MuiTypography-body2-108 MuiTypography-gutterBottom-127\\"
+                 >
+                   You may add up to 10 files (max 8GB each)
+                 </p>
+                 <div
+                   class=\\"MuiGrid-container-3\\"
+                 >
+                   <div
+                     class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43\\"
+                   >
+                     <div
+                       tabindex=\\"0\\"
+                     >
+                       <div
+                         aria-disabled=\\"false\\"
+                         class=\\"\\"
+                         style=\\"position: relative; padding: 0px;\\"
+                       >
+                         <div
+                           class=\\"MuiGrid-container-3 FileUploadDropzoneStaticContent-dropzone-519\\"
+                         >
+                           <div
+                             class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43 MuiGrid-grid-sm-6-51\\"
+                           >
+                             <p
+                               class=\\"MuiTypography-root-100 MuiTypography-body2-108 FileUploadDropzoneStaticContent-heading-520\\"
+                             >
+                               File upload restrictions
                              </p>
+                             <div>
+                               Please ensure your files:
+                               <ul>
+                                 <li>
+                                   begin with a letter and are less than 45 characters long
+                                 </li>
+                                 <li>
+                                   contain only upper and lowercase alphanumeric characters, and underscores
+                                 </li>
+                                 <li>
+                                   have only a single period which precedes the file extension: e.g. “.pdf”, “.mov”, “.tiff”, “.wav” etc.
+                                 </li>
+                                 <li>
+                                   two periods are allowed for multipart zip files.  Allowed formats for part description are: e.g. “.001 ... .999”, “.r01 ... .r999” and “.part1 ... .part999”
+                                 </li>
+                                 <li>
+                                   are uploaded individually and not inside a folder
+                                 </li>
+                               </ul>
+                             </div>
+                           </div>
+                           <div
+                             class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43 MuiGrid-grid-sm-6-51\\"
+                           >
+                             <div
+                               class=\\"MuiGrid-container-3 MuiGrid-direction-xs-column-6 MuiGrid-align-items-xs-center-11 MuiGrid-justify-xs-center-20 FileUploadDropzoneStaticContent-instructions-521\\"
+                             >
+                               <div
+                                 class=\\"MuiGrid-item-4\\"
+                               >
+                                 <svg
+                                   aria-hidden=\\"true\\"
+                                   class=\\"MuiSvgIcon-root-356 FileUploadDropzoneStaticContent-cloudIcon-522\\"
+                                   focusable=\\"false\\"
+                                   role=\\"presentation\\"
+                                   viewBox=\\"0 0 24 24\\"
+                                 >
+                                   <path
+                                     d=\\"M0 0h24v24H0z\\"
+                                     fill=\\"none\\"
+                                   />
+                                   <path
+                                     d=\\"M19.35 10.04C18.67 6.59 15.64 4 12 4 9.11 4 6.6 5.64 5.35 8.04 2.34 8.36 0 10.91 0 14c0 3.31 2.69 6 6 6h13c2.76 0 5-2.24 5-5 0-2.64-2.05-4.78-4.65-4.96zM14 13v4h-4v-4H7l5-5 5 5h-3z\\"
+                                   />
+                                 </svg>
+                               </div>
+                               <div
+                                 class=\\"MuiGrid-item-4\\"
+                               >
+                                 <p>
+                                   Click here to select files, or drag files into this area to upload
+                                 </p>
+                               </div>
+                             </div>
+                           </div>
+                         </div>
+                         <input
+                           autocomplete=\\"off\\"
+                           id=\\"Uploader\\"
+                           multiple=\\"\\"
+                           style=\\"position: absolute; top: 0px; right: 0px; bottom: 0px; left: 0px; opacity: 0.00001; pointer-events: none;\\"
+                           type=\\"file\\"
+                         />
+                       </div>
                      </div>
                    </div>
                  </div>
                </div>
+             </div>
+           </div>
            <div
              class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43\\"
            >
              <div
                class=\\"Alert\\"
@@ -348,11 +633,15 @@
                        <b>
                          Validation - 
                        </b>
                        <span>
                          Form cannot be submitted until all fields are valid. Please review all input fields.
-                         <ul />
+                         <ul>
+                           <li>
+                             Please provide additional information, corrections or upload file(s).
+                           </li>
+                         </ul>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
@@ -379,10 +668,27 @@
                  Cancel
                </span>
                <span
                  class=\\"MuiTouchRipple-root-457\\"
                />
+             </button>
+           </div>
+           <div
+             class=\\"MuiGrid-item-4\\"
+           >
+             <button
+               class=\\"MuiButtonBase-root-454 MuiButtonBase-disabled-455 MuiButton-root-428 MuiButton-contained-439 MuiButton-containedPrimary-440 MuiButton-raised-442 MuiButton-raisedPrimary-443 MuiButton-disabled-448 MuiButton-fullWidth-453\\"
+               disabled=\\"\\"
+               id=\\"fixSubmit\\"
+               tabindex=\\"-1\\"
+               type=\\"button\\"
+             >
+               <span
+                 class=\\"MuiButton-label-429\\"
+               >
+                 Submit
+               </span>
              </button>
            </div>
          </div>
        </form>
      </div>"
`;

exports[`FixRecord form should allow content indicators to be selected 4`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -350,11 +350,12 @@
                          <div
                            class=\\"MuiSelect-root-387\\"
                          >
                            <div
                              aria-haspopup=\\"true\\"
-                             aria-pressed=\\"false\\"
+                             aria-owns=\\"menu-\\"
+                             aria-pressed=\\"true\\"
                              class=\\"MuiSelect-select-388 MuiSelect-selectMenu-391 MuiInputBase-input-417 MuiInput-input-402\\"
                              id=\\"content-indicators\\"
                              role=\\"button\\"
                              tabindex=\\"0\\"
                            >"
`;

exports[`FixRecord form should allow content indicators to be selected 5`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -357,15 +357,15 @@
                              class=\\"MuiSelect-select-388 MuiSelect-selectMenu-391 MuiInputBase-input-417 MuiInput-input-402\\"
                              id=\\"content-indicators\\"
                              role=\\"button\\"
                              tabindex=\\"0\\"
                            >
-                             Scholarship of Teaching and Learning, Protocol
+                             Scholarship of Teaching and Learning, Protocol, Case Study
                            </div>
                            <input
                              type=\\"hidden\\"
-                             value=\\"454079,454080\\"
+                             value=\\"454079,454080,454081\\"
                            />
                            <svg
                              aria-hidden=\\"true\\"
                              class=\\"MuiSvgIcon-root-356 MuiSelect-icon-393\\"
                              focusable=\\"false\\"
@@ -589,67 +589,10 @@
                    </div>
                  </div>
                </div>
              </div>
            </div>
-           <div
-             class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43\\"
-           >
-             <div
-               class=\\"Alert\\"
-               style=\\"padding: 12px;\\"
-             >
-               <div
-                 class=\\"MuiGrid-container-3 MuiGrid-spacing-xs-24-27 MuiGrid-align-items-xs-flex-start-12 MuiGrid-align-content-xs-center-15 MuiGrid-justify-xs-center-20 Alert-warning-480 Alert-common-472\\"
-               >
-                 <div
-                   class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43 MuiGrid-grid-sm-true-45\\"
-                 >
-                   <div
-                     class=\\"MuiGrid-container-3 MuiGrid-align-items-xs-flex-start-12 MuiGrid-align-content-xs-center-15 MuiGrid-justify-xs-center-20\\"
-                   >
-                     <div
-                       class=\\"MuiGrid-item-4 Alert-icon-473\\"
-                       id=\\"icon\\"
-                     >
-                       <svg
-                         aria-hidden=\\"true\\"
-                         class=\\"MuiSvgIcon-root-356 icon\\"
-                         focusable=\\"false\\"
-                         role=\\"presentation\\"
-                         viewBox=\\"0 0 24 24\\"
-                       >
-                         <path
-                           d=\\"M0 0h24v24H0z\\"
-                           fill=\\"none\\"
-                         />
-                         <path
-                           d=\\"M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z\\"
-                         />
-                       </svg>
-                     </div>
-                     <div
-                       class=\\"MuiGrid-item-4 MuiGrid-grid-xs-true-31 Alert-text-474\\"
-                       id=\\"text\\"
-                     >
-                       <b>
-                         Validation - 
-                       </b>
-                       <span>
-                         Form cannot be submitted until all fields are valid. Please review all input fields.
-                         <ul>
-                           <li>
-                             Please provide additional information, corrections or upload file(s).
-                           </li>
-                         </ul>
-                       </span>
-                     </div>
-                   </div>
-                 </div>
-               </div>
-             </div>
-           </div>
          </div>
          <div
            class=\\"MuiGrid-container-3 MuiGrid-spacing-xs-24-27\\"
          >
            <div
@@ -675,21 +618,23 @@
            </div>
            <div
              class=\\"MuiGrid-item-4\\"
            >
              <button
-               class=\\"MuiButtonBase-root-454 MuiButtonBase-disabled-455 MuiButton-root-428 MuiButton-contained-439 MuiButton-containedPrimary-440 MuiButton-raised-442 MuiButton-raisedPrimary-443 MuiButton-disabled-448 MuiButton-fullWidth-453\\"
-               disabled=\\"\\"
+               class=\\"MuiButtonBase-root-454 MuiButton-root-428 MuiButton-contained-439 MuiButton-containedPrimary-440 MuiButton-raised-442 MuiButton-raisedPrimary-443 MuiButton-fullWidth-453\\"
                id=\\"fixSubmit\\"
-               tabindex=\\"-1\\"
+               tabindex=\\"0\\"
                type=\\"button\\"
              >
                <span
                  class=\\"MuiButton-label-429\\"
                >
                  Submit
                </span>
+               <span
+                 class=\\"MuiTouchRipple-root-457\\"
+               />
              </button>
            </div>
          </div>
        </form>
      </div>"
`;

exports[`FixRecord form should allow content indicators to be selected 6`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -357,15 +357,15 @@
                              class=\\"MuiSelect-select-388 MuiSelect-selectMenu-391 MuiInputBase-input-417 MuiInput-input-402\\"
                              id=\\"content-indicators\\"
                              role=\\"button\\"
                              tabindex=\\"0\\"
                            >
-                             Scholarship of Teaching and Learning, Protocol, Case Study
+                             Scholarship of Teaching and Learning, Protocol
                            </div>
                            <input
                              type=\\"hidden\\"
-                             value=\\"454079,454080,454081\\"
+                             value=\\"454079,454080\\"
                            />
                            <svg
                              aria-hidden=\\"true\\"
                              class=\\"MuiSvgIcon-root-356 MuiSelect-icon-393\\"
                              focusable=\\"false\\"
@@ -589,10 +589,67 @@
                    </div>
                  </div>
                </div>
              </div>
            </div>
+           <div
+             class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43\\"
+           >
+             <div
+               class=\\"Alert\\"
+               style=\\"padding: 12px;\\"
+             >
+               <div
+                 class=\\"MuiGrid-container-3 MuiGrid-spacing-xs-24-27 MuiGrid-align-items-xs-flex-start-12 MuiGrid-align-content-xs-center-15 MuiGrid-justify-xs-center-20 Alert-warning-531 Alert-common-523\\"
+               >
+                 <div
+                   class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43 MuiGrid-grid-sm-true-45\\"
+                 >
+                   <div
+                     class=\\"MuiGrid-container-3 MuiGrid-align-items-xs-flex-start-12 MuiGrid-align-content-xs-center-15 MuiGrid-justify-xs-center-20\\"
+                   >
+                     <div
+                       class=\\"MuiGrid-item-4 Alert-icon-524\\"
+                       id=\\"icon\\"
+                     >
+                       <svg
+                         aria-hidden=\\"true\\"
+                         class=\\"MuiSvgIcon-root-356 icon\\"
+                         focusable=\\"false\\"
+                         role=\\"presentation\\"
+                         viewBox=\\"0 0 24 24\\"
+                       >
+                         <path
+                           d=\\"M0 0h24v24H0z\\"
+                           fill=\\"none\\"
+                         />
+                         <path
+                           d=\\"M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z\\"
+                         />
+                       </svg>
+                     </div>
+                     <div
+                       class=\\"MuiGrid-item-4 MuiGrid-grid-xs-true-31 Alert-text-525\\"
+                       id=\\"text\\"
+                     >
+                       <b>
+                         Validation - 
+                       </b>
+                       <span>
+                         Form cannot be submitted until all fields are valid. Please review all input fields.
+                         <ul>
+                           <li>
+                             Please provide additional information, corrections or upload file(s).
+                           </li>
+                         </ul>
+                       </span>
+                     </div>
+                   </div>
+                 </div>
+               </div>
+             </div>
+           </div>
          </div>
          <div
            class=\\"MuiGrid-container-3 MuiGrid-spacing-xs-24-27\\"
          >
            <div
@@ -618,23 +675,21 @@
            </div>
            <div
              class=\\"MuiGrid-item-4\\"
            >
              <button
-               class=\\"MuiButtonBase-root-454 MuiButton-root-428 MuiButton-contained-439 MuiButton-containedPrimary-440 MuiButton-raised-442 MuiButton-raisedPrimary-443 MuiButton-fullWidth-453\\"
+               class=\\"MuiButtonBase-root-454 MuiButtonBase-disabled-455 MuiButton-root-428 MuiButton-contained-439 MuiButton-containedPrimary-440 MuiButton-raised-442 MuiButton-raisedPrimary-443 MuiButton-disabled-448 MuiButton-fullWidth-453\\"
+               disabled=\\"\\"
                id=\\"fixSubmit\\"
-               tabindex=\\"0\\"
+               tabindex=\\"-1\\"
                type=\\"button\\"
              >
                <span
                  class=\\"MuiButton-label-429\\"
                >
                  Submit
                </span>
-               <span
-                 class=\\"MuiTouchRipple-root-457\\"
-               />
              </button>
            </div>
          </div>
        </form>
      </div>"
`;

exports[`FixRecord form should validate the form where applicable and submit correctly 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -256,24 +256,23 @@
                      >
                         *
                      </span>
                    </label>
                    <div
-                     class=\\"MuiInputBase-root-943 MuiInput-root-930 MuiInput-underline-934 MuiInputBase-formControl-944 MuiInput-formControl-931\\"
+                     class=\\"MuiInputBase-root-943 MuiInput-root-930 MuiInput-underline-934 MuiInputBase-disabled-946 MuiInput-disabled-933 MuiInputBase-formControl-944 MuiInput-formControl-931\\"
                      label=\\"Select an action\\"
                      required=\\"\\"
                    >
                      <div
                        class=\\"MuiSelect-root-923\\"
                      >
                        <div
                          aria-haspopup=\\"true\\"
                          aria-pressed=\\"false\\"
-                         class=\\"MuiSelect-select-924 MuiSelect-selectMenu-927 MuiInputBase-input-953 MuiInput-input-938\\"
+                         class=\\"MuiSelect-select-924 MuiSelect-selectMenu-927 MuiSelect-disabled-928 MuiInputBase-input-953 MuiInput-input-938 MuiInputBase-disabled-946 MuiInput-disabled-933\\"
                          id=\\"fixAction\\"
                          role=\\"button\\"
-                         tabindex=\\"0\\"
                        >
                          I am the author/editor/contributor of this work - I would like to add information, make a correction, or upload files
                        </div>
                        <input
                          name=\\"fixAction\\"
@@ -343,23 +342,22 @@
                          data-shrink=\\"true\\"
                        >
                          Please select relevant indicator(s).
                        </label>
                        <div
-                         class=\\"MuiInputBase-root-943 MuiInput-root-930 MuiInput-underline-934 MuiInputBase-formControl-944 MuiInput-formControl-931\\"
+                         class=\\"MuiInputBase-root-943 MuiInput-root-930 MuiInput-underline-934 MuiInputBase-disabled-946 MuiInput-disabled-933 MuiInputBase-formControl-944 MuiInput-formControl-931\\"
                        >
                          <div
                            class=\\"MuiSelect-root-923\\"
                          >
                            <div
                              aria-haspopup=\\"true\\"
                              aria-owns=\\"menu-\\"
                              aria-pressed=\\"true\\"
-                             class=\\"MuiSelect-select-924 MuiSelect-selectMenu-927 MuiInputBase-input-953 MuiInput-input-938\\"
+                             class=\\"MuiSelect-select-924 MuiSelect-selectMenu-927 MuiSelect-disabled-928 MuiInputBase-input-953 MuiInput-input-938 MuiInputBase-disabled-946 MuiInput-disabled-933\\"
                              id=\\"content-indicators\\"
                              role=\\"button\\"
-                             tabindex=\\"0\\"
                            >
                              Scholarship of Teaching and Learning, Protocol, Case Study
                            </div>
                            <input
                              type=\\"hidden\\"
@@ -414,22 +412,23 @@
                    >
                      <div
                        class=\\"MuiFormControl-root-905 MuiFormControl-fullWidth-908\\"
                      >
                        <label
-                         class=\\"MuiFormLabel-root-916 MuiInputLabel-root-909 MuiInputLabel-formControl-910 MuiInputLabel-animated-913\\"
+                         class=\\"MuiFormLabel-root-916 MuiFormLabel-disabled-918 MuiInputLabel-root-909 MuiInputLabel-formControl-910 MuiInputLabel-animated-913\\"
                          data-shrink=\\"false\\"
                          for=\\"Describe the problem with this record, eg record is a duplicate, or suggested changes\\"
                        >
                          Describe the problem with this record, eg record is a duplicate, or suggested changes
                        </label>
                        <div
-                         class=\\"MuiInputBase-root-943 MuiInput-root-930 MuiInput-underline-934 MuiInputBase-fullWidth-952 MuiInput-fullWidth-937 MuiInputBase-formControl-944 MuiInput-formControl-931 MuiInputBase-multiline-951 MuiInput-multiline-936\\"
+                         class=\\"MuiInputBase-root-943 MuiInput-root-930 MuiInput-underline-934 MuiInputBase-disabled-946 MuiInput-disabled-933 MuiInputBase-fullWidth-952 MuiInput-fullWidth-937 MuiInputBase-formControl-944 MuiInput-formControl-931 MuiInputBase-multiline-951 MuiInput-multiline-936\\"
                        >
                          <textarea
                            aria-invalid=\\"false\\"
-                           class=\\"MuiInputBase-input-953 MuiInput-input-938 MuiInputBase-inputMultiline-955 MuiInput-inputMultiline-940\\"
+                           class=\\"MuiInputBase-input-953 MuiInput-input-938 MuiInputBase-disabled-946 MuiInput-disabled-933 MuiInputBase-inputMultiline-955 MuiInput-inputMultiline-940\\"
+                           disabled=\\"\\"
                            id=\\"Describe the problem with this record, eg record is a duplicate, or suggested changes\\"
                            name=\\"comments\\"
                            rows=\\"3\\"
                          />
                        </div>
@@ -440,22 +439,23 @@
                    >
                      <div
                        class=\\"MuiFormControl-root-905 MuiFormControl-fullWidth-908\\"
                      >
                        <label
-                         class=\\"MuiFormLabel-root-916 MuiInputLabel-root-909 MuiInputLabel-formControl-910 MuiInputLabel-animated-913\\"
+                         class=\\"MuiFormLabel-root-916 MuiFormLabel-disabled-918 MuiInputLabel-root-909 MuiInputLabel-formControl-910 MuiInputLabel-animated-913\\"
                          data-shrink=\\"false\\"
                          for=\\"Link (URL)\\"
                        >
                          Link (URL)
                        </label>
                        <div
-                         class=\\"MuiInputBase-root-943 MuiInput-root-930 MuiInput-underline-934 MuiInputBase-fullWidth-952 MuiInput-fullWidth-937 MuiInputBase-formControl-944 MuiInput-formControl-931\\"
+                         class=\\"MuiInputBase-root-943 MuiInput-root-930 MuiInput-underline-934 MuiInputBase-disabled-946 MuiInput-disabled-933 MuiInputBase-fullWidth-952 MuiInput-fullWidth-937 MuiInputBase-formControl-944 MuiInput-formControl-931\\"
                        >
                          <input
                            aria-invalid=\\"false\\"
-                           class=\\"MuiInputBase-input-953 MuiInput-input-938\\"
+                           class=\\"MuiInputBase-input-953 MuiInput-input-938 MuiInputBase-disabled-946 MuiInput-disabled-933\\"
+                           disabled=\\"\\"
                            id=\\"Link (URL)\\"
                            name=\\"rek_link\\"
                            type=\\"text\\"
                            value=\\"\\"
                          />
@@ -504,11 +504,11 @@
                    >
                      <div
                        tabindex=\\"0\\"
                      >
                        <div
-                         aria-disabled=\\"false\\"
+                         aria-disabled=\\"true\\"
                          class=\\"\\"
                          style=\\"position: relative; padding: 0px;\\"
                        >
                          <div
                            class=\\"MuiGrid-container-539 FileUploadDropzoneStaticContent-dropzone-1055\\"
@@ -577,10 +577,11 @@
                              </div>
                            </div>
                          </div>
                          <input
                            autocomplete=\\"off\\"
+                           disabled=\\"\\"
                            id=\\"Uploader\\"
                            multiple=\\"\\"
                            style=\\"position: absolute; top: 0px; right: 0px; bottom: 0px; left: 0px; opacity: 0.00001; pointer-events: none;\\"
                            type=\\"file\\"
                          />
@@ -589,52 +590,102 @@
                    </div>
                  </div>
                </div>
              </div>
            </div>
+           <div
+             class=\\"MuiGrid-item-540 MuiGrid-grid-xs-12-579\\"
+           >
+             <div
+               class=\\"Alert\\"
+               style=\\"padding: 12px;\\"
+             >
+               <div
+                 class=\\"MuiGrid-container-539 MuiGrid-spacing-xs-24-563 MuiGrid-align-items-xs-flex-start-548 MuiGrid-align-content-xs-center-551 MuiGrid-justify-xs-center-556 Alert-info_outline-1071 Alert-common-1059\\"
+               >
+                 <div
+                   class=\\"MuiGrid-item-540 MuiGrid-grid-xs-12-579 MuiGrid-grid-sm-true-581\\"
+                 >
+                   <div
+                     class=\\"MuiGrid-container-539 MuiGrid-align-items-xs-flex-start-548 MuiGrid-align-content-xs-center-551 MuiGrid-justify-xs-center-556\\"
+                   >
+                     <div
+                       class=\\"MuiGrid-item-540 Alert-icon-1060\\"
+                       id=\\"icon\\"
+                     >
+                       <div
+                         class=\\"MuiCircularProgress-root-1073 MuiCircularProgress-colorPrimary-1076 MuiCircularProgress-indeterminate-1075 spinner\\"
+                         role=\\"progressbar\\"
+                         style=\\"width: 38px; height: 38px;\\"
+                       >
+                         <svg
+                           class=\\"MuiCircularProgress-svg-1078\\"
+                           viewBox=\\"22 22 44 44\\"
+                         >
+                           <circle
+                             class=\\"MuiCircularProgress-circle-1079 MuiCircularProgress-circleIndeterminate-1081\\"
+                             cx=\\"44\\"
+                             cy=\\"44\\"
+                             fill=\\"none\\"
+                             r=\\"20.5\\"
+                             stroke-width=\\"3\\"
+                           />
+                         </svg>
+                       </div>
+                     </div>
+                     <div
+                       class=\\"MuiGrid-item-540 MuiGrid-grid-xs-true-567 Alert-text-1061\\"
+                       id=\\"text\\"
+                     >
+                       <b>
+                         Saving - 
+                       </b>
+                       Request is being processed.
+                     </div>
+                   </div>
+                 </div>
+               </div>
              </div>
+           </div>
+         </div>
          <div
            class=\\"MuiGrid-container-539 MuiGrid-spacing-xs-24-563\\"
          >
            <div
              class=\\"MuiGrid-item-540 MuiGrid-grid-xs-true-567\\"
            />
            <div
              class=\\"MuiGrid-item-540\\"
            >
              <button
-               class=\\"MuiButtonBase-root-990 MuiButton-root-964 MuiButton-contained-975 MuiButton-raised-978 MuiButton-fullWidth-989\\"
-               tabindex=\\"0\\"
+               class=\\"MuiButtonBase-root-990 MuiButtonBase-disabled-991 MuiButton-root-964 MuiButton-contained-975 MuiButton-raised-978 MuiButton-disabled-984 MuiButton-fullWidth-989\\"
+               disabled=\\"\\"
+               tabindex=\\"-1\\"
                type=\\"button\\"
              >
                <span
                  class=\\"MuiButton-label-965\\"
                >
                  Cancel
                </span>
-               <span
-                 class=\\"MuiTouchRipple-root-993\\"
-               />
              </button>
            </div>
            <div
              class=\\"MuiGrid-item-540\\"
            >
              <button
-               class=\\"MuiButtonBase-root-990 MuiButton-root-964 MuiButton-contained-975 MuiButton-containedPrimary-976 MuiButton-raised-978 MuiButton-raisedPrimary-979 MuiButton-fullWidth-989\\"
+               class=\\"MuiButtonBase-root-990 MuiButtonBase-disabled-991 MuiButton-root-964 MuiButton-contained-975 MuiButton-containedPrimary-976 MuiButton-raised-978 MuiButton-raisedPrimary-979 MuiButton-disabled-984 MuiButton-fullWidth-989\\"
+               disabled=\\"\\"
                id=\\"fixSubmit\\"
-               tabindex=\\"0\\"
+               tabindex=\\"-1\\"
                type=\\"button\\"
              >
                <span
                  class=\\"MuiButton-label-965\\"
                >
                  Submit
                </span>
-               <span
-                 class=\\"MuiTouchRipple-root-993\\"
-               />
              </button>
            </div>
          </div>
        </form>
      </div>"
`;

exports[`FixRecord form should validate the form where applicable and submit correctly 2`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -256,23 +256,24 @@
                      >
                         *
                      </span>
                    </label>
                    <div
-                     class=\\"MuiInputBase-root-943 MuiInput-root-930 MuiInput-underline-934 MuiInputBase-disabled-946 MuiInput-disabled-933 MuiInputBase-formControl-944 MuiInput-formControl-931\\"
+                     class=\\"MuiInputBase-root-943 MuiInput-root-930 MuiInput-underline-934 MuiInputBase-formControl-944 MuiInput-formControl-931\\"
                      label=\\"Select an action\\"
                      required=\\"\\"
                    >
                      <div
                        class=\\"MuiSelect-root-923\\"
                      >
                        <div
                          aria-haspopup=\\"true\\"
                          aria-pressed=\\"false\\"
-                         class=\\"MuiSelect-select-924 MuiSelect-selectMenu-927 MuiSelect-disabled-928 MuiInputBase-input-953 MuiInput-input-938 MuiInputBase-disabled-946 MuiInput-disabled-933\\"
+                         class=\\"MuiSelect-select-924 MuiSelect-selectMenu-927 MuiInputBase-input-953 MuiInput-input-938\\"
                          id=\\"fixAction\\"
                          role=\\"button\\"
+                         tabindex=\\"0\\"
                        >
                          I am the author/editor/contributor of this work - I would like to add information, make a correction, or upload files
                        </div>
                        <input
                          name=\\"fixAction\\"
@@ -294,11 +295,11 @@
                    </div>
                  </div>
                </div>
              </div>
            </div>
-           <div />
+           <span />
            <div
              class=\\"MuiGrid-item-540 MuiGrid-grid-xs-12-579\\"
            >
              <div
                class=\\"MuiPaper-root-846 MuiPaper-elevation1-849 MuiPaper-rounded-847 MuiCard-root-845 Cards-card-841 StandardCard\\"
@@ -342,22 +343,23 @@
                          data-shrink=\\"true\\"
                        >
                          Please select relevant indicator(s).
                        </label>
                        <div
-                         class=\\"MuiInputBase-root-943 MuiInput-root-930 MuiInput-underline-934 MuiInputBase-disabled-946 MuiInput-disabled-933 MuiInputBase-formControl-944 MuiInput-formControl-931\\"
+                         class=\\"MuiInputBase-root-943 MuiInput-root-930 MuiInput-underline-934 MuiInputBase-formControl-944 MuiInput-formControl-931\\"
                        >
                          <div
                            class=\\"MuiSelect-root-923\\"
                          >
                            <div
                              aria-haspopup=\\"true\\"
                              aria-owns=\\"menu-\\"
                              aria-pressed=\\"true\\"
-                             class=\\"MuiSelect-select-924 MuiSelect-selectMenu-927 MuiSelect-disabled-928 MuiInputBase-input-953 MuiInput-input-938 MuiInputBase-disabled-946 MuiInput-disabled-933\\"
+                             class=\\"MuiSelect-select-924 MuiSelect-selectMenu-927 MuiInputBase-input-953 MuiInput-input-938\\"
                              id=\\"content-indicators\\"
                              role=\\"button\\"
+                             tabindex=\\"0\\"
                            >
                              Scholarship of Teaching and Learning, Protocol, Case Study
                            </div>
                            <input
                              type=\\"hidden\\"
@@ -412,23 +414,22 @@
                    >
                      <div
                        class=\\"MuiFormControl-root-905 MuiFormControl-fullWidth-908\\"
                      >
                        <label
-                         class=\\"MuiFormLabel-root-916 MuiFormLabel-disabled-918 MuiInputLabel-root-909 MuiInputLabel-formControl-910 MuiInputLabel-animated-913\\"
+                         class=\\"MuiFormLabel-root-916 MuiInputLabel-root-909 MuiInputLabel-formControl-910 MuiInputLabel-animated-913\\"
                          data-shrink=\\"false\\"
                          for=\\"Describe the problem with this record, eg record is a duplicate, or suggested changes\\"
                        >
                          Describe the problem with this record, eg record is a duplicate, or suggested changes
                        </label>
                        <div
-                         class=\\"MuiInputBase-root-943 MuiInput-root-930 MuiInput-underline-934 MuiInputBase-disabled-946 MuiInput-disabled-933 MuiInputBase-fullWidth-952 MuiInput-fullWidth-937 MuiInputBase-formControl-944 MuiInput-formControl-931 MuiInputBase-multiline-951 MuiInput-multiline-936\\"
+                         class=\\"MuiInputBase-root-943 MuiInput-root-930 MuiInput-underline-934 MuiInputBase-fullWidth-952 MuiInput-fullWidth-937 MuiInputBase-formControl-944 MuiInput-formControl-931 MuiInputBase-multiline-951 MuiInput-multiline-936\\"
                        >
                          <textarea
                            aria-invalid=\\"false\\"
-                           class=\\"MuiInputBase-input-953 MuiInput-input-938 MuiInputBase-disabled-946 MuiInput-disabled-933 MuiInputBase-inputMultiline-955 MuiInput-inputMultiline-940\\"
-                           disabled=\\"\\"
+                           class=\\"MuiInputBase-input-953 MuiInput-input-938 MuiInputBase-inputMultiline-955 MuiInput-inputMultiline-940\\"
                            id=\\"Describe the problem with this record, eg record is a duplicate, or suggested changes\\"
                            name=\\"comments\\"
                            rows=\\"3\\"
                          />
                        </div>
@@ -439,23 +440,22 @@
                    >
                      <div
                        class=\\"MuiFormControl-root-905 MuiFormControl-fullWidth-908\\"
                      >
                        <label
-                         class=\\"MuiFormLabel-root-916 MuiFormLabel-disabled-918 MuiInputLabel-root-909 MuiInputLabel-formControl-910 MuiInputLabel-animated-913\\"
+                         class=\\"MuiFormLabel-root-916 MuiInputLabel-root-909 MuiInputLabel-formControl-910 MuiInputLabel-animated-913\\"
                          data-shrink=\\"false\\"
                          for=\\"Link (URL)\\"
                        >
                          Link (URL)
                        </label>
                        <div
-                         class=\\"MuiInputBase-root-943 MuiInput-root-930 MuiInput-underline-934 MuiInputBase-disabled-946 MuiInput-disabled-933 MuiInputBase-fullWidth-952 MuiInput-fullWidth-937 MuiInputBase-formControl-944 MuiInput-formControl-931\\"
+                         class=\\"MuiInputBase-root-943 MuiInput-root-930 MuiInput-underline-934 MuiInputBase-fullWidth-952 MuiInput-fullWidth-937 MuiInputBase-formControl-944 MuiInput-formControl-931\\"
                        >
                          <input
                            aria-invalid=\\"false\\"
-                           class=\\"MuiInputBase-input-953 MuiInput-input-938 MuiInputBase-disabled-946 MuiInput-disabled-933\\"
-                           disabled=\\"\\"
+                           class=\\"MuiInputBase-input-953 MuiInput-input-938\\"
                            id=\\"Link (URL)\\"
                            name=\\"rek_link\\"
                            type=\\"text\\"
                            value=\\"\\"
                          />
@@ -504,11 +504,11 @@
                    >
                      <div
                        tabindex=\\"0\\"
                      >
                        <div
-                         aria-disabled=\\"true\\"
+                         aria-disabled=\\"false\\"
                          class=\\"\\"
                          style=\\"position: relative; padding: 0px;\\"
                        >
                          <div
                            class=\\"MuiGrid-container-539 FileUploadDropzoneStaticContent-dropzone-1055\\"
@@ -577,11 +577,10 @@
                              </div>
                            </div>
                          </div>
                          <input
                            autocomplete=\\"off\\"
-                           disabled=\\"\\"
                            id=\\"Uploader\\"
                            multiple=\\"\\"
                            style=\\"position: absolute; top: 0px; right: 0px; bottom: 0px; left: 0px; opacity: 0.00001; pointer-events: none;\\"
                            type=\\"file\\"
                          />
@@ -598,50 +597,46 @@
              <div
                class=\\"Alert\\"
                style=\\"padding: 12px;\\"
              >
                <div
-                 class=\\"MuiGrid-container-539 MuiGrid-spacing-xs-24-563 MuiGrid-align-items-xs-flex-start-548 MuiGrid-align-content-xs-center-551 MuiGrid-justify-xs-center-556 Alert-info_outline-1071 Alert-common-1059\\"
+                 class=\\"MuiGrid-container-539 MuiGrid-spacing-xs-24-563 MuiGrid-align-items-xs-flex-start-548 MuiGrid-align-content-xs-center-551 MuiGrid-justify-xs-center-556 Alert-done-1095 Alert-common-1082\\"
                >
                  <div
                    class=\\"MuiGrid-item-540 MuiGrid-grid-xs-12-579 MuiGrid-grid-sm-true-581\\"
                  >
                    <div
                      class=\\"MuiGrid-container-539 MuiGrid-align-items-xs-flex-start-548 MuiGrid-align-content-xs-center-551 MuiGrid-justify-xs-center-556\\"
                    >
                      <div
-                       class=\\"MuiGrid-item-540 Alert-icon-1060\\"
+                       class=\\"MuiGrid-item-540 Alert-icon-1083\\"
                        id=\\"icon\\"
                      >
-                       <div
-                         class=\\"MuiCircularProgress-root-1073 MuiCircularProgress-colorPrimary-1076 MuiCircularProgress-indeterminate-1075 spinner\\"
-                         role=\\"progressbar\\"
-                         style=\\"width: 38px; height: 38px;\\"
-                       >
                        <svg
-                           class=\\"MuiCircularProgress-svg-1078\\"
-                           viewBox=\\"22 22 44 44\\"
+                         aria-hidden=\\"true\\"
+                         class=\\"MuiSvgIcon-root-892 icon\\"
+                         focusable=\\"false\\"
+                         role=\\"presentation\\"
+                         viewBox=\\"0 0 24 24\\"
                        >
-                           <circle
-                             class=\\"MuiCircularProgress-circle-1079 MuiCircularProgress-circleIndeterminate-1081\\"
-                             cx=\\"44\\"
-                             cy=\\"44\\"
+                         <path
+                           d=\\"M0 0h24v24H0z\\"
                            fill=\\"none\\"
-                             r=\\"20.5\\"
-                             stroke-width=\\"3\\"
                          />
+                         <path
+                           d=\\"M9 16.2L4.8 12l-1.4 1.4L9 19 21 7l-1.4-1.4L9 16.2z\\"
+                         />
                        </svg>
-                       </div>
                      </div>
                      <div
-                       class=\\"MuiGrid-item-540 MuiGrid-grid-xs-true-567 Alert-text-1061\\"
+                       class=\\"MuiGrid-item-540 MuiGrid-grid-xs-true-567 Alert-text-1084\\"
                        id=\\"text\\"
                      >
                        <b>
-                         Saving - 
+                         Success - 
                        </b>
-                       Request is being processed.
+                       Fix record request has been submitted successfully.
                      </div>
                    </div>
                  </div>
                </div>
              </div>
@@ -655,37 +650,41 @@
            />
            <div
              class=\\"MuiGrid-item-540\\"
            >
              <button
-               class=\\"MuiButtonBase-root-990 MuiButtonBase-disabled-991 MuiButton-root-964 MuiButton-contained-975 MuiButton-raised-978 MuiButton-disabled-984 MuiButton-fullWidth-989\\"
-               disabled=\\"\\"
-               tabindex=\\"-1\\"
+               class=\\"MuiButtonBase-root-990 MuiButton-root-964 MuiButton-contained-975 MuiButton-raised-978 MuiButton-fullWidth-989\\"
+               tabindex=\\"0\\"
                type=\\"button\\"
              >
                <span
                  class=\\"MuiButton-label-965\\"
                >
                  Cancel
                </span>
+               <span
+                 class=\\"MuiTouchRipple-root-993\\"
+               />
              </button>
            </div>
            <div
              class=\\"MuiGrid-item-540\\"
            >
              <button
-               class=\\"MuiButtonBase-root-990 MuiButtonBase-disabled-991 MuiButton-root-964 MuiButton-contained-975 MuiButton-containedPrimary-976 MuiButton-raised-978 MuiButton-raisedPrimary-979 MuiButton-disabled-984 MuiButton-fullWidth-989\\"
-               disabled=\\"\\"
+               class=\\"MuiButtonBase-root-990 MuiButton-root-964 MuiButton-contained-975 MuiButton-containedPrimary-976 MuiButton-raised-978 MuiButton-raisedPrimary-979 MuiButton-fullWidth-989\\"
                id=\\"fixSubmit\\"
-               tabindex=\\"-1\\"
+               tabindex=\\"0\\"
                type=\\"button\\"
              >
                <span
                  class=\\"MuiButton-label-965\\"
                >
                  Submit
                </span>
+               <span
+                 class=\\"MuiTouchRipple-root-993\\"
+               />
              </button>
            </div>
          </div>
        </form>
      </div>"
`;
